selfhost/test/typechecker/assignment/variable_error_type_mismatch.1.out
Error at %FILE_NAME%:2:5
Type mismatch
  |  a = "asdf"
         ^
Expected: Int
but instead found: String
