selfhost/test/typechecker/assignment/variable_error_type_mismatch.1.abra
var a = 123
a = "asdf"